--- a/rn/ios/rn/Info.plist
+++ b/rn/ios/rn/Info.plist
@@ -53,5 +53,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>This app uses speech recognition to process voice commands for AI interaction.</string>
 </dict>
 </plist>
